force-app/main/default/objects/Chess_Move__c/Chess_Move__c.object-meta.xml
<CustomObject>
    <label>Chess Move</label>
    <nameField>
        <displayFormat>CM-{000000}</displayFormat>
        <label>Chess Move Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chess Moves</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>