force-app/main/default/objects/Chess_Move__c/fields/Move__c.field-meta.xml
<CustomField>
    <fullName>Move__c</fullName>
    <label>Move</label>
    <length>10</length>
    <type>Text</type>
</CustomField>