force-app/main/default/objects/Chess_Move__c/fields/x_Chess_Game__c.field-meta.xml
<CustomField>
    <fullName>x_Chess_Game__c</fullName>
    <label>Chess Game</label>
    <referenceTo>Chess_Game__c</referenceTo>
    <relationshipLabel>Moves</relationshipLabel>
    <relationshipName>Chess_Moves</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>