force-app/main/default/objects/Chess_Move__c/fields/x_Move_Number__c.field-meta.xml
<CustomField>
    <fullName>x_Move_Number__c</fullName>
    <label>Move Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>